--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         android:theme="@style/Theme.PDFTool"
         tools:targetApi="31">
         <activity
+            android:name=".domain.activities.SearchFileActivity"
+            android:exported="false" />
+        <activity
             android:name=".domain.activities.OpenFilePdfActivity"
             android:exported="false" />
         <activity
